<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="item"
            type="com.testtask.ui.main.dashboard.model.TransactionItem" />


    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="@dimen/margin_small"
        android:paddingBottom="@dimen/margin_small">

        <TextView
            android:id="@+id/hashTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_normal"
            android:layout_weight="0.5"
            android:ellipsize="marquee"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:text="@string/hash_caption" />

        <TextView
            android:id="@+id/time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_weight="0.2"
            android:ellipsize="marquee"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:text="@string/time_caption" />

        <TextView
            android:id="@+id/valueBtc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_marginEnd="@dimen/margin_normal"
            android:layout_weight="0.3"
            android:ellipsize="marquee"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:text="@string/btc_caption" />

    </LinearLayout>

</layout>