<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="viewModel"
            type="com.testtask.ui.fragment.auth.AuthViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="@dimen/margin_large"
        android:paddingEnd="@dimen/margin_large"
        tools:context=".ui.fragment.auth.AuthFragment">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/horizontalCenterGuideline"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5" />

        <EditText
            android:id="@+id/emailTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_normal"
            android:hint="@string/email_hint"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:text="@={viewModel.eMailLiveData}"
            app:layout_constraintBottom_toTopOf="@id/passwordTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/passwordTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint"
            android:importantForAutofill="no"
            android:inputType="textVisiblePassword"
            android:text="@={viewModel.passWordLiveData}"
            app:layout_constraintBottom_toTopOf="@id/horizontalCenterGuideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_normal"
            android:onClick="@{() -> viewModel.signInButtonClicked()}"
            android:text="@string/sign_in_button_caption"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/passwordTextView" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>